# Modanovo

./: MANIFEST.in  README.md  pyproject.toml
data_utils/: example_data.mgf
modanovo/: config.py  config.yaml  modanovo.py  utils.py  version.py
modanovo/data/: ms_io.py
modanovo/denovo/: __init__.py  dataloaders.py  encoders.py  model.py  model_runner.py  peptide_transformer.py  primitives.py  spectrum_transformer.py  tokenizers.py
